--- a/activites_optionnelles.html
+++ b/activites_optionnelles.html
@@ -116,9 +116,9 @@
                 <div class="col-sm-6 featured-news">
                     <h2>Sports</h2>
                     <p>Le corps de cadets offre des activités de sport dans le but de promouvoir la bonne forme
-                        physique. Les sports aident aussi à améliorer la confiance et l'estiment de soi, tout en
+                        physique. Les sports aident aussi à améliorer la confiance et l'estime de soi, tout en
                         fournissant une activité passionnante et amusante
-                        pour le cadet.<br>Nous avons des équipes de volleyball, basketball, kinball, badmington et
+                        pour le cadet.<br>Nous avons des équipes de volleyball, basketball, kinball, badminton et
                         improvisation et le corps de cadets participe à des compétitions sportives entre corps de cadets
                         de la région. Cette compétition est connue
                         sous le nom de Jeux des cadets et a lieu vers la fin du mois de janvier tous les ans.<br>De plus
@@ -129,7 +129,7 @@
                         Bronze, Argent, Or et Excellence.</p>
                 </div>
                 <div class="col-sm-6 latest-news">
-                    <h2>Tir Récréatif</h2>
+                    <h2>Tir récréatif</h2>
                     <p>Les cadets apprennent les rudiments du tir de précision à la carabine au travers du programme de
                         l'étoile. De plus, ils doivent faire au moins une fois par année du tir de qualification lors
                         des journées de tir organisées par
@@ -147,11 +147,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 featured-news">
-                    <h2>Peloton de Précison</h2>
+                    <h2>Peloton de précison</h2>
                     <p>Le peloton de précision s'adresse principalement à ceux qui aiment les chorégraphies, qui ont une
                         bonne mémoire et qui ont une très bonne discipline. Le peloton de précision est un exercice de
                         marche militaire où les rotations,
-                        contre-marche et changement de formation se joignent à l'alignement, la discipline, aux gestes
+                        contremarches et changements de formation se joignent à l'alignement, la discipline, aux gestes
                         vifs et mouvements secs pour faire une chorégraphie unique en son genre et qui en mettra plein
                         la vue.</p>
                 </div>
@@ -180,8 +180,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
