--- a/grades_fonctions.html
+++ b/grades_fonctions.html
@@ -134,7 +134,7 @@
                         <li>Désigner des officiers, instructeurs civils ou bénévoles pour chaque fonction particulière
                             et veiller à désigner des remplaçants lorsque les titulaires sont absents.</li>
                         <li>Assurer la sécurité et le bien-être du personnel et des cadets sous son commandement.</li>
-                        <li>Assurer la formation continue du personnel et des cadets sous con commandement.</li>
+                        <li>Assurer la formation continue du personnel et des cadets sous son commandement.</li>
                         <li>Exécuter d'autres fonctions assignées par le Commandant de l'URSC(E) ou ses représentants.
                         </li>
                         <li>Entretenir de bonnes relations avec les parents et le public.</li>
@@ -254,7 +254,7 @@
                     <img class="img-responsive" src="images/insignes/capt.png" alt="Capitaine" style="height:150px;">
                 </div>
                 <div class="col-sm-10">
-                    <h1>Officier d'instruction</h1>
+                    <h1>Officier d'entrainement</h1>
                     <p>L'officier d'instruction du Corps de Cadets relève directement du commandant et assure la
                         planification, l'organisation, la direction et le contrôle des activités inscrites dans le
                         calendrier des activités de l'unité.</p>
@@ -333,8 +333,8 @@
                         <li>Favoriser la fierté d'appartenance des cadets au corps de cadets par diverses méthodes
                             telles que le fanion de peloton, chansons, slogan, cri de ralliement, etc.</li>
                         <li>Voit à l'évaluation des dossiers des cadets pour une promotion.</li>
-                        <li>Voit à l'évaluation des cadets pour les cadets et peloton du mois.</li>
-                        <li>Rencontre les nouveaux cadets et veille à leurs faciliter l'entrée.</li>
+                        <li>Voit à l'évaluation des cadets pour les cadets et pelotons du mois.</li>
+                        <li>Rencontre les nouveaux cadets et veille à leur faciliter l'entrée.</li>
                         <li>Exécuter toutes autres tâches assignées par ses supérieurs.</li>
                     </ul>
                 </div>
@@ -420,12 +420,12 @@
                             d'activité.</li>
                         <li>Tenir régulièrement des réunions avec les sous-officiers afin de régler tout problème
                             pouvant survenir au niveau des sous-officiers et les faire connaître à la réunion des
-                            officiers ou à un officiers qui pourrait être concerné.</li>
-                        <li>Par son comportement, son attitude, ses présences et sa tenue, être en tout temps et toute
+                            officiers ou à un officier qui pourrait être concerné.</li>
+                        <li>Par son comportement, son attitude, ses présences et sa tenue, être en tout temps et en toute
                             circonstance une source d'exemple et de motivation pour ses subordonnés.</li>
                         <li>Transmettre rapidement et complètement toute information à ses subordonnés.</li>
                         <li>Agir à titre d'instructeur.</li>
-                        <li>Faire parti de l'état-major cadet.</li>
+                        <li>Faire partie de l'état-major cadet.</li>
                         <li>Exécuter toutes autres tâches assignées par le commandant.</li>
                     </ul>
                 </div>
@@ -487,7 +487,7 @@
                         <li>Acheminer les plans de leçon, les tests de leçon, examens, etc. à l'officier d'instruction
                             dans les délais prescrits.</li>
                         <li>Tiens à jour les aides visuels.</li>
-                        <li>Évalue les instructeurs lors des périodes donnés.</li>
+                        <li>Évalue les instructeurs lors des périodes données.</li>
                         <li>Supporte les cadets instructeurs dans la planification de leurs leçons.</li>
                         <li>Signaler le début des périodes d'instruction aux cadets, s'assurer que ceux-ci gagnent leurs
                             locaux respectifs. Aviser tous les instructeurs 5 minutes avant la fin de la période et à la
@@ -520,7 +520,7 @@
                             d'administration.</li>
                         <li>Assurer le lien entre les différents services (administration, approvisionnement) du Corps
                             de Cadets et les cadets.</li>
-                        <li>Compiler et vérifier les états de parade et en avertir le cmdt de pon lors qu'un cadet est
+                        <li>Compiler et vérifier les états de parade et en avertir le cmdt de pon lorsqu'un cadet est
                             absent depuis plus de 3 semaines.</li>
                         <li>Acheminer les dossiers de cadets et les documents manquants à l'officier d'administration.
                         </li>
@@ -550,7 +550,7 @@
                     <ul>
                         <li>Maintenir un haut standard de discipline, de tenue vestimentaire, de rendement et de
                             comportement pour lui-même et pour son peloton.</li>
-                        <li>Conseiller les cadets de son peloton dans l'exécution de leurs tâches en leurs faisant
+                        <li>Conseiller les cadets de son peloton dans l'exécution de leurs tâches en leur faisant
                             profiter de son expérience personnelle.</li>
                         <li>Assurer une bonne diffusion de l'information ainsi qu'une saine communication à tous les
                             niveaux du peloton.</li>
@@ -565,7 +565,7 @@
                             constater et d'encourager l'esprit sportif de ses cadets.</li>
                         <li>Être présent à toutes les rencontres hebdomadaires et activités auxquels il s'est inscrit.
                         </li>
-                        <li>Connaître tous ses cadets afin de renforcer la communication, discipline et le rendement au
+                        <li>Connaître tous ses cadets afin de renforcer la communication, la discipline et le rendement au
                             sein de son peloton.</li>
                         <li>Recevoir et transmettre à ses cadets la chaîne téléphonique selon les délais prescrits.</li>
                         <li>Faire des vérifications surprises dans la chaîne téléphonique afin de vérifier qu'elle se
@@ -600,7 +600,7 @@
                     <ul>
                         <li>Maintenir un haut standard de discipline, de tenue vestimentaire, de rendement et de
                             comportement pour lui-même et pour sa section.</li>
-                        <li>Conseiller les cadets de sa section dans l'exécution de leurs tâches en leurs faisant
+                        <li>Conseiller les cadets de sa section dans l'exécution de leurs tâches en leur faisant
                             profiter de son expérience personnelle.</li>
                         <li>Assurer une bonne diffusion de l'information ainsi qu'une saine communication à tous les
                             niveaux du peloton.</li>
@@ -615,7 +615,7 @@
                             constater et d'encourager l'esprit sportif de ses cadets.</li>
                         <li>Être présent à toutes les rencontres hebdomadaires et activités auxquels il s'est inscrit.
                         </li>
-                        <li>Connaître tous ses cadets afin de renforcer la communication, discipline et le rendement au
+                        <li>Connaître tous ses cadets afin de renforcer la communication, la discipline et le rendement au
                             sein de sa section.</li>
                         <li>Recevoir et transmettre à ses cadets la chaîne téléphonique selon les délais prescrits.</li>
                         <li>S'assurer de la présence du plus grand nombre de cadets aux différents rassemblements de
@@ -785,8 +785,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
