--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="service-wrapper">
                         <i class="fa fa-globe"></i>
                         <h3>Expeditions</h3>
-                        <p>Les cadets peuvent participer à plusieurs expédition que ce soit au Canada ou ailleur dans le
+                        <p>Les cadets peuvent participer à plusieurs expéditions que ce soit au Canada ou ailleurs dans le
                             monde et tout cela, gratuitement.</p>
                         <a href="expeditions.html" class="btn">Lire plus</a>
                     </div>
@@ -163,7 +163,7 @@
                         <i class="fa fa-usd"></i>
                         <h3>Gratuit!</h3>
                         <p>Le programme des cadets est entièrement gratuit! Les cadets peuvent même avoir l'opportunité
-                            d'optenir un emplois rémunéré durant l'été.</p>
+                            d'obtenir un emploi rémunéré durant l'été.</p>
                         <a href="inscriptions.html" class="btn">Lire plus</a>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <i class="fa fa-child"></i>
                         <h3>Camps d'été</h3>
                         <p>Les cadets peuvent avoir l'occasion de faire un camp d'une durée de 2, 3 ou 6 semaines sur le
-                            camps de cadets de Valcartier.</p>
+                            camp de cadets de Valcartier.</p>
                         <a href="instruction_ete.html" class="btn">Lire plus</a>
                     </div>
                 </div>
@@ -196,16 +196,16 @@
                 <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
                     d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
                     d'équipes seront
-                    testées. Les inconditionnels des activités en plein-air vont adorer les défis que nous offrons!
+                    testées. Les inconditionnels des activités en plein air vont adorer les défis que nous offrons!
                 </p>
 
                 <p>Les cadets de l'Armée vont développer leurs habiletés dans le maniement de cartes et boussoles,
-                    du GPS, de l'orienteering, des premiers-soins, de la survie et du camping en forêt, du canotage,
+                    du GPS, de l'orientering, des premiers soins, de la survie et du camping en forêt, du canotage,
                     de la descente en
-                    rappel, de la randonnée, du vélo de montage, etc. Alors qu'ils acquièrent de l'expérience,
+                    rappel, de la randonnée, du vélo de montagne, etc. Alors qu'ils acquièrent de l'expérience,
                     certains vont aussi être sélectionnés pour des activités excitantes comme le parachutisme, la
                     descente de rivière en
-                    canot, l'escalade de glacier et ils apprendront à devenir des leaders de plein-air.</p>
+                    canot, l'escalade de glacier et ils apprendront à devenir des leaders de plein air.</p>
 
                 <p>Les cadets de l'Armée participent à des activités reliées aux traditions des cérémonies
                     militaires et de civisme qui leur permettent d'honorer leur héritage canadien. Ils développent
@@ -245,8 +245,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
