--- a/instruction_ete.html
+++ b/instruction_ete.html
@@ -131,7 +131,7 @@
                     <hr>
                     <h1>Instructeur de tir de carabine à air comprimé (ITCAC)</h1>
                     <p>Durée: <br>
-                        1 semaine d'apprentisage à distance<br />
+                        1 semaine d'apprentissage à distance<br />
                         3 semaines en personne<br />
                         4 semaines au total</p>
                     <p>Le cours d'instructeur de tir à la carabine à air comprimé offre aux cadets l'occasion
@@ -150,7 +150,7 @@
                     <hr>
                     <h1>Instructeur d'exercice militaire et cérémonial (IEMC)</h1>
                     <p>Durée:<br />
-                        1 semaine d'apprentisage à distance<br />
+                        1 semaine d'apprentissage à distance<br />
                         3 semaines en personne<br />
                         4 semaines au total</p>
                     <p>Le cours d'instructeur d'exercices et de cérémonies offre aux cadets
@@ -168,7 +168,7 @@
                     <hr>
                     <h1>Instructeur de conditionnement physique et sports (ICPS)</h1>
                     <p>Durée:<br />
-                        1 semaine d'apprentisage à distance<br />
+                        1 semaine d'apprentissage à distance<br />
                         3 semaines en personne<br />
                         4 semaines au total</p>
                     <p>Le cours d'instructeur de conditionnement physique et de sports offre
@@ -190,7 +190,7 @@
                     <hr>
                     <h1>Cadet musicien - Musique militaire (CMMM)</h1>
                     <p>Durée:<br />
-                        1 semaine d'apprentisage à distance<br />
+                        1 semaine d'apprentissage à distance<br />
                         3 semaines en personne<br />
                         4 semaines au total</p>
                     <p>Le cours de cadet musicien - Musique militaire offre aux cadets
@@ -211,7 +211,7 @@
                     <hr>
                     <h1>Chef d'équipe d'expédition (CEE)</h1>
                     <p>Durée:<br />
-                        1 semaine d'apprentisage à distance<br />
+                        1 semaine d'apprentissage à distance<br />
                         3 semaines en personne<br />
                         4 semaines au total</p>
                     <p>Le cours de chef d'équipe d'expédition offre aux cadets l'occasion de
@@ -330,7 +330,7 @@
                     <p><strong>Conditions préalables</strong></p>
                     <ul>
                         <li>Avoir 16 ans avant le 1er juillet de l'année du cours</li>
-                        <li>Avoir fait complété un cours de 6 semaines</li>
+                        <li>Avoir complété un cours de 6 semaines</li>
                         <li>Étoile or</li>
                         <li>La priorité est
                             accordée aux cadets qui sont qualifiés de l'ENE ou ceux qui ont accumulé un nombre de
@@ -391,7 +391,7 @@
                             sélectionné par le D Cad &amp; RJC</li>
                     </ul>
                     <hr>
-                    <h1>Instructions avancés</h1>
+                    <h1>Instructions avancées</h1>
                     <h3>Cadets-Cadres</h3>
                     <p>Les cadets-cadres
                         suivent une instruction avancée, qui comprend notamment un encadrement par des chefs adultes
@@ -418,11 +418,10 @@
                     </ul>
                     <hr>
                     <h3>Précamp des Cadets-Cadres Séniors</h3>
-                    <p>Le précamp des
-                        cadets-cadres sénior vise à former et à sélectionner les cadets-cadres Adjudant-Maître qui
-                        seront responsable d'un cours et l'Adjudant-Chef qui sera responsable du centre. Pendant ce
-                        camps, les cadets recevront une instrution très avancé et ils seront constament évalué tout
-                        au long de la semaine.</p>
+                    <p>Le précamp des cadets-cadres sénior vise à former et à sélectionner les cadets-cadres
+                        Adjudant-Maître qui seront responsables d'un cours et l'Adjudant-Chef qui sera responsable du
+                        centre. Pendant ce camps, les cadets recevront une instruction très avancée et ils seront
+                        constamment évalués tout au long de la semaine.</p>
                     <p><strong>Conditions préalables</strong></p>
                     <ul>
                         <li>Les cadets-cadres doivent être âgés d'<strong>au moins 16 ans</strong> le premier jour de
@@ -451,8 +450,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
