--- a/parents.html
+++ b/parents.html
@@ -111,7 +111,7 @@
                         Le comité de soutien a aussi pour rôle de représenter les parents auprès du commandant. En cas
                         de questionnement ou de conflit, n'hésitez pas à communiquer avec un des membres du comité qui
                         est présent au début et à la fin des soirées d'entraînement ou en envoyant un courriel à : <a
-                            href="mailto:2972.comite@lcac.qc.ca">2972.comite@lcac.qc.ca</a>
+                            href="mailto:2972.comite@lcac.qc.ca">2972.comite@lcac.qc.ca</a>.
                     </p>
                 </div>
             </div>
@@ -124,26 +124,26 @@
                 <h1>Comment devenir bénévole au CC2972 Mercier</h1>
                 <div class="col-sm-8">
                     <p>Un corps de cadets ne pourrait exister sans l'apport exceptionnel de ses bénévoles. Il existe
-                        plusieurs façons de s'impliquer</p>
+                        plusieurs façons de s'impliquer.</p>
                     <br>
                     <p>Voici comment vous pouvez faire une différence:</p>
                     <ul>
-                        <li>En siégeant au sein du comité de soutien: Les membres du comité se rencontrent une fois par
+                        <li>En siégeant au sein du comité de soutien: les membres du comité se rencontrent une fois par
                             mois pour discuter et prendre des décisions sur des sujets relatifs au soutien logistique et
                             financier du corps de cadets.</li>
-                        <li>En accompagnant les cadets lors d'activités: Il ne faut pas hésiter à donner votre nom
+                        <li>En accompagnant les cadets lors d'activités: il ne faut pas hésiter à donner votre nom
                             lorsqu'on demande des volontaires pour ainsi alléger la charge du personnel instructeur.
                             C'est une expérience très enrichissante.</li>
-                        <li>En participant aux campagnes de financement: Il y a plusieurs campagnes de financement au
+                        <li>En participant aux campagnes de financement: il y a plusieurs campagnes de financement au
                             courant de l'année. Vente de chocolat, collecte de contenants consignés, emballage au Super
                             C et souper spaghetti. Pour que ces campagnes soient un succès, le comité de soutien a
                             besoin de nombreux bénévoles.</li>
-                        <li>En devenant membre du personnel: Toute personne désirant donner du temps comme instructeur
-                            ou s'occuper de certain dossier comme les sports, le tir, la musique ou encore apporter un
-                            soutien logistique en s'occupant du quatier-maître.</li>
+                        <li>En devenant membre du personnel: toute personne désirant donner du temps comme instructeur
+                            ou s'occuper de certains dossiers comme les sports, le tir, la musique ou encore apporter un
+                            soutien logistique en s'occupant du quartier-maitre.</li>
                     </ul>
                     <p>Dans tous les cas, chaque bénévole qui désire s'impliquer dans un corps de cadets doit se
-                        soumettre à une enquête d'antécédants judiciaires. Le proccèsus est sans frais. Si vous avez
+                        soumettre à une enquête d'antécédents judiciaires. Le processus est sans frais. Si vous avez
                         envie de vous impliquer, communiquez avec nous via courriel à <a
                             href="mailto:cadets@cc2972.ca">cadets@cc2972.ca</a> ou en personne chaque mardi soir. Vous
                         n'avez qu'à demander à parler à la présidente du comité de soutien ou au commandant.</p>
@@ -194,8 +194,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
