--- a/recompenses.html
+++ b/recompenses.html
@@ -135,7 +135,7 @@
                         <li>Moyenne des présences du peloton lors des activités complémentaires et optionnelles</li>
                         <li>Moyenne des inspections du peloton</li>
                         <li>Évaluation de l'exercice militaire selon le SMC</li>
-                        <li>Point boni selon diverse activité lors du mois</li>
+                        <li>Point boni selon diverses activités lors du mois</li>
                         <li>Action positive/négative</li>
                         <li>Matériel remis en retard administration/quartier-maître</li>
                     </ul>
@@ -159,8 +159,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
