--- a/references_cadets.html
+++ b/references_cadets.html
@@ -116,7 +116,7 @@
                         tenue vestimentaire au sein des corps de cadets. L'uniforme des cadets permettrait aux jeunes de
                         toutes les origines confondues de se consacrer à leur objectif d'apprentissage et de leadership.
                         C'est en portant un uniforme identique à leurs camarades qu'ils seront fiers d'affirmer leur
-                        indentité propre aux corps de cadets. De plus l'uniforme leur permet d'appendre d'afficher les
+                        identité propre aux corps de cadets. De plus l'uniforme leur permet d'afficher les
                         écussons et badges qu'ils ont obtenus.</p>
                     <h3>Les tenues</h3>
                     <div class="container">
@@ -161,7 +161,7 @@
                         </div>
                     </div>
 
-                    <h3 style="padding-top: 50px;">Le bérêt</h3>
+                    <h3 style="padding-top: 50px;">Le béret</h3>
                     <img src="/images/beret.jpg" alt="" />
                     <ul>
                         <li>L'insigne de béret se porte au-dessus de l'œil gauche</li>
@@ -183,9 +183,9 @@
                         <li>Pour ce faire, vous devez avoir un linge à polir et de la cire noire « KIWI »</li>
                         <li>Il suffit de prendre le côté doux du linge à polir et de le tendre autour de l'index. Puis,
                             ajoutez-y de la cire et un peu d'eau. Ensuite, faites de petits mouvements circulaires
-                            jusqu'à que la cire soit bien pénétrée à la surface du cuir. Recommencez, en prenant soin de
-                            changer d'endroit sur votre linge, jusqu'à ce que les bottes aient une surface miroir</li>
-                        <li>Les bas de laine doivent être portés à l'intérieur des bottes</li>
+                            jusqu'à ce que la cire ait bien pénétré la surface du cuir. Recommencez, en prenant soin de
+                            changer d'endroit sur votre linge, jusqu'à ce que les bottes aient une surface miroir.</li>
+                        <li>Les bas de laine doivent être portés à l'intérieur des bottes.</li>
                     </ul>
                     <h3 style="padding-top: 50px;">Divers points sur la tenue</h3>
                     <p>Repassage:</p>
@@ -234,7 +234,7 @@
                     <p>L'instruction des Cadets de l'Armée est
                         divisée en 5 niveaux. Ces niveaux sont associés à une étoile de
                         couleur. Pour se qualifier au niveau suivant, le cadet doit prendre part aux soirées
-                        d'instruction les mardi soirs et aux activités obligatoires.</p>
+                        d'instruction les mardis soirs et aux activités obligatoires.</p>
                     <h1>Évaluation des cadets de l'étoile verte</h1>
                     <p>Le but de l'évaluation des cadets de l'étoile verte est de mesurer l'étendue de sa participation
                         à l'instruction obligatoire et à l'instruction complémentaire à l'horaire et d'évaluer en
@@ -264,11 +264,11 @@
                         <li>102 - Service communautaire - Effectuer un service communautaire</li>
                         <li>103 - Leadership - Participer à des activités de promotion du travail d'équipe</li>
                         <li>104 - Bonne forme physique et mode de vie sain - élaborer un plan d'activité personnel</li>
-                        <li>105 - Sport récréatifs - Participer à des sports récréatifs</li>
+                        <li>105 - Sports récréatifs - Participer à des sports récréatifs</li>
                         <li>106 - Tir de précision - Tirer avec la carabine à air comprimé des cadets</li>
                         <li>107 - Connaissance générale des cadets - Servir dans un corps de cadets de l'armée</li>
                         <li>108 - Exercice militaire - Participer à une cérémonie de revue annuelle</li>
-                        <li>120 - Familiarasation avec les FC - Démontrer la connaissance de l'organisation et des
+                        <li>120 - Familiarisation avec les FC - Démontrer la connaissance de l'organisation et des
                             traditions des FC</li>
                         <li>121 - Entraînement en campagne - Participer à un exercice en campagne lors d'une fin de
                             semaine</li>
@@ -298,7 +298,7 @@
                         doivent avoir réussi le test de maniement de la carabine à air comprimé
                         des cadets, qui est présenté dans l'A-CR-CCP-701/PG-002, Cadets royaux
                         de l'Armée canadienne - Norme de qualification et plan
-                        del'étoile verte, chapitre 3, annexe C.</p>
+                        de l'étoile verte, chapitre 3, annexe C.</p>
                     <p>Aucune évaluation supplémentaire des cadets
                         (c.-à-d. tests théoriques, contrôles de rendement, etc.) ne doit
                         être utilisée pour déterminer l'admissibilité à la
@@ -314,7 +314,7 @@
                             leader dans un environement entre pairs</li>
                         <li>204 - Bonne forme physique et mode de vie sain - Mise à
                             jour du plan d'activités personnelles</li>
-                        <li>205 - Sport récréatifs - Pendre part à
+                        <li>205 - Sports récréatifs - Pendre part à
                             des activités sportives</li>
                         <li>206 - Tir de précision - Tirer avec la carabine
                             à air comprimé des cadets durant un exercice de tir de précision
@@ -323,7 +323,7 @@
                             dans un corps de cadets de l'armée</li>
                         <li>208 - Exercice militaire - Exécuter de l'exercice
                             militaire en tant que membre de l'escouade</li>
-                        <li>220 - Familiarasation avec les FC - Reconnaître les
+                        <li>220 - Familiarisation avec les FC - Reconnaître les
                             opérations de soutien de la paix des FC</li>
                         <li>221 - Entraînement en campagne - Exécuter les
                             tâches d'un membre d'une section durant un exercice en campagne lors d'une fin de
@@ -334,7 +334,7 @@
                             randonnée pédestre le long d'un itinéraire dans le cadre d'un
                             exercice incluant une nuit</li>
                         <li>224 - Survie en milieu sauvage - Déterminer les mesures
-                            immédiates à prendres lorsqu'on est perdu</li>
+                            immédiates à prendre lorsqu'on est perdu</li>
                         <li>RSPJ - à compléter au plus tard le 31
                             décembre de l'année d'instruction en cours</li>
                     </ul>
@@ -374,14 +374,14 @@
                             communautaire</li>
                         <li>304 - Bonne forme physique et mode de vie sain - Mise à
                             jour du plan d'activités personnelles</li>
-                        <li>305 - Sport récréatifs - Pendre part à
+                        <li>305 - Sports récréatifs - Pendre part à
                             des activités sportives</li>
                         <li>306 - Tir de précision - Tirer avec la carabine
                             à air comprimé des cadets durant un exercice de tir de précision
                             récréatif</li>
                         <li>307 - Connaissance générale des cadets - Servir
                             dans un corps de cadets de l'armée</li>
-                        <li>320 - Familiarasation avec les FC - Reconnaître la
+                        <li>320 - Familiarisation avec les FC - Reconnaître la
                             vaillance des membres des FC</li>
                         <li>321 - Entraînement en campagne - Exercer les fonctions
                             d'un chef d'équipe durant un exercice en campagne lors d'une fin de
@@ -395,7 +395,7 @@
                     <ul>
                         <li>303 - Leadership - Exercer le rôle d'un chef
                             d'équipe</li>
-                        <li>308 - Exercice militaire - Diriger un escouade avant un
+                        <li>308 - Exercice militaire - Diriger une escouade avant un
                             rassemblement</li>
                         <li>309 - Techniques d'instruction - Enseigner une
                             leçon</li>
@@ -442,14 +442,14 @@
                             communautaire</li>
                         <li>404 - Bonne forme physique et mode de vie sain - Mise à
                             jour du plan d'activités personnelles</li>
-                        <li>405 - Sport récréatifs - Pendre part à
+                        <li>405 - Sports récréatifs - Pendre part à
                             des activités sportives</li>
                         <li>406 - Tir de précision - Tirer avec la carabine
                             à air comprimé des cadets durant un exercice de tir de précision
                             récréatif</li>
                         <li>407 - Connaissance générale des cadets - Servir
                             dans un corps de cadets de l'armée</li>
-                        <li>420 - Familiarasation avec les FC - Décrire la
+                        <li>420 - Familiarisation avec les FC - Décrire la
                             structure de l'armée canadienne</li>
                         <li>425 - Leadership lors d'activité en plein air-
                             élaborer un plan d'expédition</li>
@@ -464,8 +464,8 @@
                         <li>409 - Techniques d'instruction - Enseigner une
                             leçon</li>
                         <li>422 - Navigation - Suivre une route à
-                            multi-étapes à l'aide d'un récepteur du syst ème de
-                            posionnement global GPS</li>
+                            multiétapes à l'aide d'un récepteur du système de
+                            positionnement global GPS</li>
                         <li>424 - Survie en milieu sauvage - Utiliser les ressources
                             naturelles en situation de survie</li>
                         <li>426 - Expédition - Mettre pratique les habiletés
@@ -617,8 +617,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
