--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
@@ -83,7 +83,7 @@
                             <li><a href="cadets-cadres.html">Nos cadets-cadres</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contactez-Nous</a></li>
+                    <li class="active"><a href="contact.html">Contactez-Nous</a></li>
                 </ul>
             </div>
         </div>
@@ -177,8 +177,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
