--- a/expeditions.html
+++ b/expeditions.html
@@ -106,18 +106,18 @@
                     <h1>Exercice aventurier</h1>
                     <p>Les cadets vont en exercice aventurier trois fois par année (automne, hiver et printemps). Un
                         exercice aventurier se déroule du vendredi soir au dimanche après-midi. Lors de ces fins de
-                        semaines, les cadets ont l'occasion de mettre leurs notions de leadership à l'épreuve.</p>
+                        semaine, les cadets ont l'occasion de mettre leurs notions de leadership à l'épreuve.</p>
                     <p>Ils apprennent des notions de survie en forêt, comment construire des abris naturels et comment
                         faire des feux. Ils ont aussi l'occasion de mettre en pratique leurs notions de topographie,
-                        comment utiliser une carte et boussole et comment utiliser un GPS.</p>
-                    <p>Les cadets qui désirent vivent d'autres aventures de plein-air peuvent le faire à travers quatre
+                        comment utiliser une carte et une boussole et comment utiliser un GPS.</p>
+                    <p>Les cadets qui désirent vivent d'autres aventures de plein air peuvent le faire à travers quatre
                         autres activités.</p>
                     <h1>Programme expédition</h1>
                     <p>Depuis l'année 2000, la Ligue des Cadets de l'Armée du Canada et le Ministère de la Défense
                         Nationale ont permis à plusieurs cadets de l'Armée de participer aux expéditions internationales
                         et nationales. Ces expéditions ont permis à des jeunes canadiens de visiter plusieurs pays et
-                        destinations comme le Maroc, l'Australie, la Corée du Sud, le Costa Rica, les états-Unis, le
-                        Mont Blanc, l'Italie, l'Espagne et la France ainsi que des voyages à l'intérieur de notre
+                        destinations comme le Maroc, l'Australie, la Corée du Sud, le Costa Rica, les États-Unis, le
+                        Mont-Blanc, l'Italie, l'Espagne et la France ainsi que des voyages à l'intérieur de notre
                         magnifique pays.</p>
                     <p>Le programme d'Expédition des Cadets de l'Armée est l'activité la plus réputée où les meilleurs
                         cadets de partout au Canada testeront et iront à la limite de leurs capacités physiques et
@@ -173,7 +173,7 @@
                             challenge, ou qui présentent des expériences civiles documentées au niveau du plein-air/
                             expéditions</li>
                         <li>Si un besoin existe de départager des cadets d'expériences similaires, la priorité sera
-                            accordée aux cadets qui ont accumulé plus de points à l'Etoile nationale d'excellence (ENE)
+                            accordée aux cadets qui ont accumulé plus de points à l'étoile nationale d'excellence (ENE)
                             au moment de la sélection</li>
                         <li>Un cadet peut seulement participer à une expédition nationale ou internationale par année
                             (période de douze mois consécutifs de la première expédition)</li>
@@ -181,7 +181,7 @@
                     <h3><img src="/images/fouraid.jpg" alt="fouraid" width="97" height="126"
                             style="vertical-align: middle;" />Course d'aventure FouRaid</h3>
                     <p>En équipe de trois, les compétiteurs doivent parcourir une distance variant entre 35 et 50 km sur
-                        une durée de 8 heures. à l'aide d'une boussole et de différents types de cartes, ils doivent
+                        une durée de 8 heures. À l'aide d'une boussole et de différents types de cartes, ils doivent
                         localiser des points de contrôle disposés à divers endroits sur le terrain. Les disciplines
                         principales de la course d'aventure FouRaid sont :</p>
                     <ul>
@@ -190,7 +190,7 @@
                         <li>Trekking et course en sentiers</li>
                         <li>Rappel sur paroi rocheuse</li>
                     </ul>
-                    <p>Pour plus d'informations vous pouvez visitez <a href="http://fouraid.com/"
+                    <p>Pour plus d'informations, vous pouvez visiter <a href="http://fouraid.com/"
                             target="_blank">http://fouraid.com/</a></p>
                 </div>
             </div>
@@ -212,8 +212,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
