--- a/historique.html
+++ b/historique.html
@@ -446,8 +446,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
