--- a/inscriptions.html
+++ b/inscriptions.html
@@ -105,15 +105,14 @@
             <div class="row">
                 <p>
                     Le mouvement des cadets vise à encourager les jeunes de 12 à 18 ans à devenir des citoyens actifs et
-                    responsables au sein de leur communauté, de développer chez eux les qualités de civisme et de
-                    leadership,
-                    de promouvoir la forme physique et de stimuler leur intérêt pour les activités des Forces
+                    responsables au sein de leur communauté, à développer chez eux les qualités de civisme et de
+                    leadership, à promouvoir la forme physique et à stimuler leur intérêt pour les activités des Forces
                     canadiennes.<br>
-                    Les corps de cadets sont des organismes civils, parrainé conjointement par la Ligue des cadets de
+                    Les corps de cadets sont des organismes civils, parrainés conjointement par la Ligue des cadets de
                     l'armée et par le ministère de la Défense nationale du Canada, et financé par ce dernier.<br>
                     Les cadets ne s'engagent aucunement à servir comme militaires et peuvent quitter lorsqu'ils le
                     désirent.<br>
-                    Vous pouvez vous inscrire en vous présentant en personne, accompagné d'un parent, tous les mardi
+                    Vous pouvez vous inscrire en vous présentant en personne, accompagné d'un parent, tous les mardis
                     soir de 18h30 à 21h (de septembre à mai).<br><br>
                     Le Corps de cadets 2972 Mercier est situé au <a
                         href="https://www.google.com/maps?q=720+st-jean+baptiste+mercier&hl=fr&ie=UTF8&sll=37.0625,-95.677068&sspn=35.082817,78.662109&vpsrc=0&hnear=720+Boulevard+Saint+-Jean-Baptiste,+Mercier,+Qu%C3%A9bec+J6R+1G2,+Canada&t=m&z=16"
@@ -182,8 +181,8 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
-                    <h3>Nos réseau sociaux</h3>
-                    <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
+                    <h3>Nos réseaux sociaux</h3>
+                    <p>Vous pouvez suivre nos activités sur nos réseaux sociaux!</p>
                     <div>
                         <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
                             title="Page Facebook"><img src="images/logo_facebook.png" width="64"
@@ -196,9 +195,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
